cmake_minimum_required(VERSION 3.27.7)

PROJECT(CHIP-8)
OPTION(CHIP-8_VENDORED "Use vendored libraries" OFF)

ADD_SUBDIRECTORY(./lib/SDL/ EXCLUDE_FROM_ALL)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /entry:mainCRTStartup")

FILE(GLOB_RECURSE SOURCE_FILES
    src/*.cpp
)

ADD_EXECUTABLE(CHIP-8 WIN32 ${SOURCE_FILES})

FILE(GLOB INCLUDE_FILES header/*/)
TARGET_INCLUDE_DIRECTORIES(${CMAKE_PROJECT_NAME} PRIVATE
    INCLUDE_FILES
)

TARGET_LINK_LIBRARIES(CHIP-8 PRIVATE SDL3::SDL3)

ADD_CUSTOM_COMMAND(TARGET CHIP-8 POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:CHIP-8> $<TARGET_RUNTIME_DLLS:CHIP-8>
    COMMAND_EXPAND_LISTS
)